# ws-shard-manager

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: polymarket.rs
src/: config.rs  connection.rs  error.rs  handler.rs  health.rs  lib.rs  manager.rs  metrics.rs  shard.rs
